--- a/src/Hangman.css
+++ b/src/Hangman.css
@@ -3,6 +3,7 @@
   color: black;
   text-align: center;
   zoom: 1.3;
+  height: 100vh;
 }
 
 .Hangman img {
@@ -33,6 +34,9 @@
 
 .Hangman-reset {
   width: 75px !important;
+  display: block;
+  font-size: .7em;
+  margin: auto !important;
 }
 
 .Hangman button {
